Fixed white space issue

--- a/in-sync-frontend/src/pages/MainPage.css
+++ b/in-sync-frontend/src/pages/MainPage.css
@@ -10,4 +10,5 @@
 
 .MainPage h1 {
     color: white;
+    margin-bottom: 80px;
 }
